Migrate to .Net Core 2.0

--- a/src/UploadProcessor/UploadProcessor.csproj
+++ b/src/UploadProcessor/UploadProcessor.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
-    <RuntimeIdentifier>win7-x86</RuntimeIdentifier>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <AssemblyName>UploadProcessor</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -30,11 +29,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Website\Website.csproj" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net461' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
 </Project>
