--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,5 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <config>
+    <!--
+      Where packages should go.  Visual Studio will provide a default value of $(SolutionDir) but command-line based
+      package restores could end up in a different location.  Setting this value keeps Visual Studio and NuGet.exe
+      in sync for packages.config based restores.
+    -->
+    <add key="repositoryPath" value=".\packages" />
+  </config>
+  <packageRestore>
+    <add key="enabled" value="True" />
+    <add key="automatic" value="True" />
+  </packageRestore>
+  <activePackageSource>
+    <add key="All" value="(Aggregate source)" />
+  </activePackageSource>
   <packageSources>
     <add key="NuGet" value="https://api.nuget.org/v3/index.json" />
     <add key="aspnet-contrib" value="https://www.myget.org/F/aspnet-contrib/api/v3/index.json" />
